--- a/members.html
+++ b/members.html
@@ -11,7 +11,7 @@
 
 
 
-<title>members.utf8</title>
+<title></title>
 
 <script src="libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -317,15 +317,18 @@ Also it's best to edit it with a text editor that doesn't wrap lines
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/Leon.picture.jpg" /></td>
-<td><div class="line-block"><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b><br />
-<b>Campbell Family Mental Health Research Institute at CAMH</b><br />
-<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
-<b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
-Toronto, Ontario, Canada<br />
- <a href="mailto:leon.french@camh.ca" class="email">leon.french@camh.ca</a><br />
- <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
- <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
+<td><div class="figure">
+<img src="images/Leon.picture.jpg" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b>
+<b>Campbell Family Mental Health Research Institute at CAMH</b>
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b>
+<b> Associate Member, Institute of Medical Science, University of Toronto</b>
+Toronto, Ontario, Canada
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a>
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a>
  <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></div></td>
 </tr>
 </tbody>
@@ -341,9 +344,12 @@ Toronto, Ontario, Canada<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/derek.jpeg" /></td>
-<td><div class="line-block"><b>MSc, University of Toronto</b><br />
-d(dot)howard(at)mail.utoronto.ca<br />
+<td><div class="figure">
+<img src="images/derek.jpeg" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>MSc, University of Toronto</b>
+d(dot)howard(at)mail.utoronto.ca
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -359,18 +365,21 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/pegah.png" width="150" /></td>
-<td><div class="line-block"><b>Research Analyst in Machine Learning</b><br />
-<b>MSc, Computer Science, University of Toronto</b><br />
-<a href="mailto:pegah.abedesfahani@mail.utoronto.ca" class="email">pegah.abedesfahani@mail.utoronto.ca</a><br />
-<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a><br />
+<td><div class="figure">
+<img src="images/pegah.png" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>Research Analyst in Machine Learning</b>
+<b>MSc, Computer Science, University of Toronto</b>
+<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a>
+<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a>
                                                                                          </div></td>
 </tr>
 </tbody>
 </table>
 <hr />
 </div>
-<div id="wennie-wu-masters-student-co-supervised-by-dr.-etienne-sibille" class="section level4">
+<div id="wennie-wu-masters-student-co-supervised-by-dr.etienne-sibille" class="section level4">
 <h4>Wennie Wu, Master’s Student (co-supervised by Dr. Etienne Sibille)</h4>
 <table>
 <colgroup>
@@ -379,11 +388,14 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/wennie.jpg" width="150" /></td>
-<td><div class="line-block"><b>Master’s Student</b><br />
-<b>BSc, Biomedical Computing, Queen’s University</b><br />
-<a href="mailto:wennie.wu@mail.utoronto.ca" class="email">wennie.wu@mail.utoronto.ca</a><br />
-<a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a><br />
+<td><div class="figure">
+<img src="images/wennie.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>Master’s Student</b>
+<b>BSc, Biomedical Computing, Queen’s University</b>
+<a href="mailto:wennie.wu@mail.utoronto.ca">wennie.wu@mail.utoronto.ca</a>
+<a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -399,10 +411,13 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/sejal.jpg" width="150" /></td>
-<td><div class="line-block"><b>PhD, University of Toronto</b><br />
-<a href="mailto:sejal.patel@camh.ca" class="email">sejal.patel@camh.ca</a><br />
-<a href="https://ca.linkedin.com/in/sejal-patel-9a9847165/">LinkedIn profile</a><br />
+<td><div class="figure">
+<img src="images/sejal.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>PhD, University of Toronto</b>
+<a href="mailto:sejal.patel@camh.ca">sejal.patel@camh.ca</a>
+<a href="https://ca.linkedin.com/in/sejal-patel-9a9847165/">LinkedIn profile</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -418,11 +433,14 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/ethan.jpg" width="150" /></td>
-<td><div class="line-block"><b>Master’s Student,</b><br />
-<b>H.B.Sc, Neuroscience and Molecular Biology, University of Toronto</b><br />
-<a href="mailto:ethan.kim@mail.utoronto.ca" class="email">ethan.kim@mail.utoronto.ca</a><br />
-<a href="https://www.linkedin.com/in/ethan-kim-465890113/">LinkedIn profile</a><br />
+<td><div class="figure">
+<img src="images/ethan.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>Master’s Student,</b>
+<b>H.B.Sc, Neuroscience and Molecular Biology, University of Toronto</b>
+<a href="mailto:ethan.kim@mail.utoronto.ca">ethan.kim@mail.utoronto.ca</a>
+<a href="https://www.linkedin.com/in/ethan-kim-465890113/">LinkedIn profile</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -438,10 +456,13 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td><img src="./images/val.jpg" width="150" /></td>
-<td><div class="line-block"><b>H.B.Sc Neuroscience, University of Toronto</b><br />
-<a href="mailto:valeriya.dontsova@mail.utoronto.ca" class="email">valeriya.dontsova@mail.utoronto.ca</a><br />
-<a href="https://ca.linkedin.com/in/valeriya-dontsova-40a90b184/">LinkedIn profile</a><br />
+<td><div class="figure">
+<img src="images/val.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>H.B.Sc Neuroscience, University of Toronto</b>
+<a href="mailto:valeriya.dontsova@mail.utoronto.ca">valeriya.dontsova@mail.utoronto.ca</a>
+<a href="https://ca.linkedin.com/in/valeriya-dontsova-40a90b184/">LinkedIn profile</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -450,6 +471,24 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </div>
 <div id="previous-members" class="section level3">
 <h3>Previous members</h3>
+<div id="clinton-royce-cunha-graduate-project-student" class="section level4">
+<h4>Clinton Royce Cunha, Graduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td></td>
+<td><div style="white-space: pre-line;"><b>Masters of Bioinformatics, University of Guelph</b>
+<a href="mailto:ccunha@uoguelph.ca">ccunha@uoguelph.ca</a>
+                                                                                         </div></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
 <div id="alex-marin-undergraduate-project-student" class="section level4">
 <h4>Alex Marin, Undergraduate Project Student</h4>
 <table>
@@ -460,8 +499,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>Fundamental Genetics Specialist, University of Toronto</b><br />
-<a href="mailto:alex.marin@mail.utoronto.ca" class="email">alex.marin@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>Fundamental Genetics Specialist, University of Toronto</b>
+<a href="mailto:alex.marin@mail.utoronto.ca">alex.marin@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -478,8 +517,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB and Statistics program, University of Toronto</b><br />
-<a href="mailto:minhan.ho@mail.utoronto.ca" class="email">minhan.ho@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
+<a href="mailto:minhan.ho@mail.utoronto.ca">minhan.ho@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -496,8 +535,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB and Biology, University of Toronto</b><br />
-<a href="mailto:Xindi.Zhang@mail.utoronto.ca" class="email">Xindi.Zhang@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB and Biology, University of Toronto</b>
+<a href="mailto:Xindi.Zhang@mail.utoronto.ca">Xindi.Zhang@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -514,8 +553,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:jenny.yin@mail.utoronto.ca" class="email">jenny.yin@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -532,8 +571,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>LMP and Computer Science, University of Toronto</b><br />
-<a href="mailto:linwenh.huang@mail.utoronto.ca" class="email">linwenh.huang@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>LMP and Computer Science, University of Toronto</b>
+<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -550,8 +589,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB, University of Toronto</b><br />
-<a href="mailto:joelle.jee@mail.utoronto.ca" class="email">joelle.jee@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB, University of Toronto</b>
+<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -568,8 +607,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB and Statistics program, University of Toronto</b><br />
-<a href="mailto:chunhin.lee@mail.utoronto.ca" class="email">chunhin.lee@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -586,8 +625,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:alana.man@mail.utoronto.ca" class="email">alana.man@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
@@ -604,8 +643,8 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div class="line-block"><b>Engineering Science, University of Toronto</b><br />
-<a href="mailto:jacob.ritchie@mail.utoronto.ca" class="email">jacob.ritchie@mail.utoronto.ca</a><br />
+<td><div style="white-space: pre-line;"><b>Engineering Science, University of Toronto</b>
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
