--- a/toolsAndData.html
+++ b/toolsAndData.html
@@ -314,7 +314,7 @@ $(document).ready(function () {
 <div id="online-tools---mostly-all-are-prototype-versions" class="section level3">
 <h3>Online tools - mostly all are prototype versions</h3>
 <ul>
-<li><a href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic tisse</a>: Polygenic celltype tester for the human GTEx tissues</li>
+<li><a href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic tissue</a>: Polygenic celltype tester for the human GTEx tissues</li>
 <li><a href="https://brain.shinyapps.io/polygenic_celltypes/">Polygenic celltypes</a>: Polygenic celltype tester for the mouse nervous system</li>
 <li><a href="https://brain.shinyapps.io/polygenic_layers/">Polygenic developmental zones</a>: Polygenic developmental layer tester for human and macaque cortex</li>
 <li><a href="https://ethanhkim.shinyapps.io/transcriptome_app/">LaminaRGeneVis</a>: Gene expression enrichment tester for human cortical layers</li>
