Adding image based protein tool

--- a/index.html
+++ b/index.html
@@ -289,10 +289,13 @@ class="section level3">
 <div id="human" class="section level2">
 <h2>Human</h2>
 <ul>
-<li><a
-href="https://share.streamlit.io/leonfrench/polyprotein_stats/main/protein_embeddings_app.py">Polyprotein
-stats</a>: Looks at simple and complex representations of protein
-sequences and tests if they can be used for classification</li>
+<li>Polyprotein stats <a
+href="https://share.streamlit.io/leonfrench/polyprotein_stats/main/protein_embeddings_app.py">ProtT5
+embeddings</a> or <a
+href="https://leonfrench-polyprotein-stats-protein-embeddings-app-czi--bys9gy.streamlitapp.com/">cytoself
+feature spectra</a>: Looks at simple and complex representations of
+protein sequences or images and tests if they can be used for
+classification</li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
 tissue</a>: Polygenic celltype tester for the bulk human GTEx
