New tool for first trimester data

--- a/index.html
+++ b/index.html
@@ -301,29 +301,33 @@ href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
 tissue</a>: Polygenic celltype tester for the bulk human GTEx
 tissues</li>
 <li><a
-href="https://polygenic.shinyapps.io/polygenic_gtex_single_cell/">Polygenic
-single cell tissue</a>: Polygenic celltype tester for the human GTEx
-single cell pilot data from Eraslan et al.</li>
+href="https://polygenic.shinyapps.io/polygenic_gtex_single_cell/">Single
+cell tissue</a>: Polygenic celltype tester for the human GTEx single
+cell pilot data from Eraslan et al.</li>
 <li><a
-href="https://derekhoward.shinyapps.io/enteric_enrichment/">Polygenic
-enteric tester</a>: Polygenic tester for human enteric nervous
-system</li>
+href="https://derekhoward.shinyapps.io/enteric_enrichment/">Enteric
+tester</a>: Polygenic tester for human enteric nervous system</li>
 <li><a
-href="https://polygenic.shinyapps.io/polygenic_singlecell_from_hpa/">Polygenic
-Human Protein Atlas tester</a>: Polygenic tester for Human Protein Atlas
+href="https://polygenic.shinyapps.io/polygenic_singlecell_from_hpa/">Human
+Protein Atlas tester</a>: Polygenic tester for Human Protein Atlas
 single-cell data from Karlsson et al. (gene expression data)</li>
 <li><a href="https://hbaset.msl.ubc.ca/">HBASets</a>: a tool for
 multigene expression mapping in the human brain</li>
-<li><a href="https://brain.shinyapps.io/polygenic_layers/">Polygenic
-developmental zones</a>: Polygenic developmental layer tester for human
-and macaque cortex</li>
+<li><a href="https://brain.shinyapps.io/polygenic_layers/">Developmental
+zones</a>: Polygenic developmental layer tester for human and macaque
+cortex</li>
 <li><a
 href="https://ethanhkim.shinyapps.io/transcriptome_app/">LaminaRGeneVis</a>:
 Gene expression enrichment tester for human cortical layers</li>
 <li><a
-href="https://poly-brain.shinyapps.io/polygenic_snrna_from_siletti_et_al/">Polygenic
-adult brain single nucleus data</a>: Polygenic tester for adult human
-brain single nucleus dataset from Siletti et al.</li>
+href="https://poly-brain.shinyapps.io/polygenic_snrna_from_siletti_et_al/">Adult
+brain single nucleus data</a>: Polygenic tester for adult human brain
+single nucleus dataset from Siletti et al.</li>
+<li><a
+href="https://poly-brain.shinyapps.io/polygenic_snrna_from_braun_et_al/">First-trimester
+developing human brain single cell dataset from Braun et al. </a>:
+Polygenic tester for fetal human brain single cell dataset from Braun et
+al.</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
