Minor spacing edits

--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@ brain single nucleus data</a>: Polygenic tester for adult human brain
 single nucleus dataset from Siletti et al.</li>
 <li><a
 href="https://poly-brain.shinyapps.io/polygenic_snrna_from_braun_et_al/">First-trimester
-developing human brain single cell dataset from Braun et al. </a>:
-Polygenic tester for fetal human brain single cell dataset from Braun et
-al.</li>
+developing human brain single cell data</a>: Polygenic tester for fetal
+human brain single cell dataset from Braun et al.</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
