--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@ class="section level3">
 <div id="human" class="section level2">
 <h2>Human</h2>
 <ul>
+<li><a
+href="https://poly-brain.shinyapps.io/polyprotein_atlas/">Polyprotein
+tissue (GTEx samples)</a>: Tissue specific polyprotein tester for the
+quantitative proteome map of the human body from Jiang et al.</li>
 <li>Polyprotein stats <a
 href="https://share.streamlit.io/leonfrench/polyprotein_stats/main/protein_embeddings_app.py">ProtT5
 embeddings</a> or <a
