Added poly drug tool

--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@ class="section level3">
 <h2>Human</h2>
 <ul>
 <li><a
+href="https://poly-brain.shinyapps.io/polyprotein_drugs/">Polyprotein
+compounds</a>: Drug mechanism of action polyprotein tester for the
+proteome-wide atlas of drug mechanism of action from Mitchell et
+al.</li>
+<li><a
 href="https://poly-brain.shinyapps.io/polyprotein_atlas/">Polyprotein
 tissue (GTEx samples)</a>: Tissue specific polyprotein tester for the
 quantitative proteome map of the human body from Jiang et al.</li>
