New embedding tool for Geneformer

--- a/index.html
+++ b/index.html
@@ -298,13 +298,19 @@ al.</li>
 href="https://poly-brain.shinyapps.io/polyprotein_atlas/">Polyprotein
 tissue (GTEx samples)</a>: Tissue specific polyprotein tester for the
 quantitative proteome map of the human body from Jiang et al.</li>
-<li>Polyprotein stats <a
+<li>Polyprotein stats: : Looks at simple and complex representations of
+genes or proteins and tests if they can be used for classification
+<ul>
+<li><a
 href="https://share.streamlit.io/leonfrench/polyprotein_stats/main/protein_embeddings_app.py">ProtT5
-embeddings</a> or <a
-href="https://leonfrench-polyprotein-stats-protein-embeddings-app-czi--bys9gy.streamlitapp.com/">cytoself
-feature spectra</a>: Looks at simple and complex representations of
-protein sequences or images and tests if they can be used for
-classification</li>
+embeddings</a></li>
+<li><a
+href="https://leonfrench-polyprotein-stats-protein-embeddings-app-czi--bys9gy.streamlitapp.com/">Cytoself
+feature spectra</a></li>
+<li><a
+href="https://leonfrench-polyprotein-stats-protein-embeddings-app-gene-ng4s05.streamlit.app/">Geneformer
+embeddings from single cells</a></li>
+</ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
 tissue</a>: Polygenic celltype tester for the bulk human GTEx
