--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@ feature spectra</a></li>
 <li><a
 href="https://leonfrench-polyprotein-stats-protein-embeddings-app-gene-ng4s05.streamlit.app/">Geneformer
 embeddings from single cells</a></li>
+<li><a href="https://probe-scgpt-gene-embeddings.streamlit.app/">scGPT
+embeddings from single cells</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
