Added SaProt tool

--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@ href="https://leonfrench-polyprotein-stats-protein-embeddings-app-gene-ng4s05.st
 embeddings from single cells</a></li>
 <li><a href="https://probe-scgpt-gene-embeddings.streamlit.app/">scGPT
 embeddings from single cells</a></li>
+<li><a href="https://saprot-embeddings.streamlit.app/">SaProt structure
+aware protein embeddings from structure</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
