--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@ embeddings from single cells</a></li>
 <li><a href="https://probe-scgpt-gene-embeddings.streamlit.app/">scGPT
 embeddings from single cells</a></li>
 <li><a href="https://saprot-embeddings.streamlit.app/">SaProt structure
-aware protein embeddings from structure</a></li>
+aware protein embeddings</a></li>
+<li><a href="https://esm2-650m-embeddings.streamlit.app/">ESM2 650M
+model protein embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
