Adding another embedding while out sick

--- a/index.html
+++ b/index.html
@@ -316,6 +316,8 @@ embeddings from single cells</a></li>
 aware protein embeddings</a></li>
 <li><a href="https://esm2-650m-embeddings.streamlit.app/">ESM2 650M
 model protein embeddings</a></li>
+<li><a href="https://prostt5-embeddings.streamlit.app/">ProstT5 protein
+sequence and structure embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
