Added the GenePT probe tool

--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@ aware protein embeddings</a></li>
 model protein embeddings</a></li>
 <li><a href="https://prostt5-embeddings.streamlit.app/">ProstT5 protein
 sequence and structure embeddings</a></li>
+<li><a href="https://gene-pt-embeddings.streamlit.app/">GenePT gene
+description based GPT-3.5 embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
