--- a/index.html
+++ b/index.html
@@ -352,6 +352,11 @@ single nucleus dataset from Siletti et al.</li>
 href="https://poly-brain.shinyapps.io/polygenic_snrna_from_braun_et_al/">First-trimester
 developing human brain single cell data</a>: Polygenic tester for fetal
 human brain single cell dataset from Braun et al.</li>
+<li><a
+href="https://poly-brain.shinyapps.io/polygenic_organelles/">Global
+organelle proteome profiling</a>: Polygenic tester for the global
+organelle proteome profiling dataset from the Chan Zuckerberg
+Biohub</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
