--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ al.</li>
 href="https://poly-brain.shinyapps.io/polyprotein_atlas/">Polyprotein
 tissue (GTEx samples)</a>: Tissue specific polyprotein tester for the
 quantitative proteome map of the human body from Jiang et al.</li>
-<li>Polyprotein stats: : Looks at simple and complex representations of
+<li>Polyprotein stats: Looks at simple and complex representations of
 genes or proteins and tests if they can be used for classification
 <ul>
 <li><a
