Added nucleotide transformer

--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@ model protein embeddings</a></li>
 sequence and structure embeddings</a></li>
 <li><a href="https://gene-pt-embeddings.streamlit.app/">GenePT gene
 description based GPT-3.5 embeddings</a></li>
+<li><a
+href="https://nucleotide-transformer-embeddings.streamlit.app/">Nucleotide
+transformer embeddings from 12k bases upstream of transcription start
+sites</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
