--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@ description based GPT-3.5 embeddings</a></li>
 href="https://nucleotide-transformer-embeddings.streamlit.app/">Nucleotide
 transformer embeddings from 12k bases upstream of transcription start
 sites</a></li>
+<li><a href="https://nicheformer-embeddings.streamlit.app/">Nicheformer
+embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
