Added two cell x gene dataset tools.

--- a/index.html
+++ b/index.html
@@ -363,6 +363,14 @@ href="https://poly-brain.shinyapps.io/polygenic_organelles/">Global
 organelle proteome profiling</a>: Polygenic tester for the global
 organelle proteome profiling dataset from the Chan Zuckerberg
 Biohub</li>
+<li><a
+href="https://polygenes.shinyapps.io/polygeneic_fetal_human/">Human
+fetal atlas</a>: Polygenic tester for the human cell atlas of fetal gene
+expression by Cao et al.</li>
+<li><a
+href="https://polygenes.shinyapps.io/polygeneic_white_adipose/">Human
+white adipose tissue</a>: Polygenic tester for the abdominal white
+adipose tissue cell atlas by Streets et al. </li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
