Added another GPT3.5 based tool

--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@ model protein embeddings</a></li>
 <li><a href="https://prostt5-embeddings.streamlit.app/">ProstT5 protein
 sequence and structure embeddings</a></li>
 <li><a href="https://gene-pt-embeddings.streamlit.app/">GenePT gene
-description based GPT-3.5 embeddings</a></li>
+description based GPT-3.5 embeddings</a> and <a
+href="https://gene-pt-embeddings-non-ncbi.streamlit.app/">without NCBI
+descriptions</a> in prompt</li>
 <li><a
 href="https://nucleotide-transformer-embeddings.streamlit.app/">Nucleotide
 transformer embeddings from 12k bases upstream of transcription start
