Added Othrus link

--- a/index.html
+++ b/index.html
@@ -328,6 +328,8 @@ transformer embeddings from 12k bases upstream of transcription start
 sites</a></li>
 <li><a href="https://nicheformer-embeddings.streamlit.app/">Nicheformer
 embeddings</a></li>
+<li><a href="https://apps.healthuniverse.com/elp-ilu-kfw/">Orthrus
+embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
