Changed links after changing a few apps to python 3.10

--- a/index.html
+++ b/index.html
@@ -301,14 +301,12 @@ quantitative proteome map of the human body from Jiang et al.</li>
 <li>Polyprotein stats: Looks at simple and complex representations of
 genes or proteins and tests if they can be used for classification
 <ul>
-<li><a
-href="https://share.streamlit.io/leonfrench/polyprotein_stats/main/protein_embeddings_app.py">ProtT5
+<li><a href="https://probe-t5-protein-embeddings.streamlit.app/">ProtT5
 embeddings</a></li>
-<li><a
-href="https://leonfrench-polyprotein-stats-protein-embeddings-app-czi--bys9gy.streamlitapp.com/">Cytoself
+<li><a href="https://polyproteinstats-czi.streamlit.app/">Cytoself
 feature spectra</a></li>
 <li><a
-href="https://leonfrench-polyprotein-stats-protein-embeddings-app-gene-ng4s05.streamlit.app/">Geneformer
+href="https://polyproteinstats-geneformer.streamlit.app/">Geneformer
 embeddings from single cells</a></li>
 <li><a href="https://probe-scgpt-gene-embeddings.streamlit.app/">scGPT
 embeddings from single cells</a></li>
