Link to meta Hi C

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ sites</a></li>
 embeddings</a></li>
 <li><a href="https://apps.healthuniverse.com/elp-ilu-kfw/">Orthrus
 embeddings</a></li>
+<li><a href="https://hi-c-embed.streamlit.app/">Meta Hi-C PCA</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
