--- a/index.html
+++ b/index.html
@@ -329,8 +329,10 @@ embeddings</a></li>
 <li><a href="https://apps.healthuniverse.com/elp-ilu-kfw/">Orthrus
 embeddings</a></li>
 <li><a href="https://hi-c-embed.streamlit.app/">Meta Hi-C PCA</a></li>
-<li><a href="https://subcell-embed.streamlit.app/">SubCell fluorescense
+<li><a href="https://subcell-embed.streamlit.app/">SubCell fluorescence
 microscopy embeddings</a></li>
+<li><a href="https://esm-c-600-embeddings.streamlit.app/">ESM C 600M
+embeddings</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
