--- a/index.html
+++ b/index.html
@@ -378,6 +378,10 @@ expression by Cao et al.</li>
 href="https://polygenes.shinyapps.io/polygeneic_white_adipose/">Human
 white adipose tissue</a>: Polygenic tester for the abdominal white
 adipose tissue cell atlas by Streets et al. </li>
+<li><a
+href="https://polygenes.shinyapps.io/polygeneic_blood_human/">Human
+blood cells</a>: Polygenic tester for the reference blood cell atlas by
+ScaleBio</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
