Added adipose tool

--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ href="https://polygenes.shinyapps.io/polygeneic_white_adipose/">Human
 white adipose tissue</a>: Polygenic tester for the abdominal white
 adipose tissue cell atlas by Streets et al. </li>
 <li><a
+href="https://polygenes.shinyapps.io/polygenic_visceral_adipose/">Human
+visceral adipose tissue</a>: Polygenic tester for the visceral adipose
+tissue atlas by Lazarescu et al.</li>
+<li><a
 href="https://polygenes.shinyapps.io/polygeneic_blood_human/">Human
 blood cells</a>: Polygenic tester for the reference blood cell atlas by
 ScaleBio</li>
