Added retina tool

--- a/index.html
+++ b/index.html
@@ -386,6 +386,9 @@ tissue atlas by Lazarescu et al.</li>
 href="https://polygenes.shinyapps.io/polygeneic_blood_human/">Human
 blood cells</a>: Polygenic tester for the reference blood cell atlas by
 ScaleBio</li>
+<li><a href="https://polygenes.shinyapps.io/polygenic_retina/">Human
+retina atlas</a>: Polygenic tester for the human retina atlas by Jin Li
+et al.</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
