Added CCA 100 dims

--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@ embeddings</a></li>
 microscopy embeddings</a></li>
 <li><a href="https://esm-c-600-embeddings.streamlit.app/">ESM C 600M
 embeddings</a></li>
+<li><a href="https://cca-100-embed-tool.streamlit.app/">CCA 100 shared
+dims on ProtT5, scGPT and Orthrus</a></li>
 </ul></li>
 <li><a
 href="https://derekhoward.shinyapps.io/gtex_enrichment/">Polygenic
