Added Asian diversity atlas

--- a/index.html
+++ b/index.html
@@ -391,6 +391,10 @@ ScaleBio</li>
 <li><a href="https://polygenes.shinyapps.io/polygenic_retina/">Human
 retina atlas</a>: Polygenic tester for the human retina atlas by Jin Li
 et al.</li>
+<li><a
+href="https://polyexpression.shinyapps.io/polygeneic_asian_immune/">Asian
+Immune Diversity Atlas</a>: Polygenic tester for the Asian Immune
+Diversity Atlas</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
