Added two tools and noted one is down

--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@ href="https://polygenic.shinyapps.io/polygenic_singlecell_from_hpa/">Human
 Protein Atlas tester</a>: Polygenic tester for Human Protein Atlas
 single-cell data from Karlsson et al. (gene expression data)</li>
 <li><a href="https://hbaset.msl.ubc.ca/">HBASets</a>: a tool for
-multigene expression mapping in the human brain</li>
+multigene expression mapping in the human brain. Currently down - send
+me an email if you miss it!</li>
 <li><a href="https://brain.shinyapps.io/polygenic_layers/">Developmental
 zones</a>: Polygenic developmental layer tester for human and macaque
 cortex</li>
@@ -395,6 +396,12 @@ et al.</li>
 href="https://polyexpression.shinyapps.io/polygeneic_asian_immune/">Asian
 Immune Diversity Atlas</a>: Polygenic tester for the Asian Immune
 Diversity Atlas</li>
+<li><a href="https://generic-genes.streamlit.app/">Mundane or generic
+property tester</a>: Polygenic tester fo mundane, basic, or non-specific
+signals.</li>
+<li><a href="https://auroc-go-enrichment.streamlit.app/">Basic AUROC GO
+tester</a>: Takes in a ranked input and computes GO enrichment.
+Developed primarily by Katarina Vucic.</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
