Added protein neighborhoods

--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@ signals.</li>
 <li><a href="https://auroc-go-enrichment.streamlit.app/">Basic AUROC GO
 tester</a>: Takes in a ranked input and computes GO enrichment.
 Developed primarily by Katarina Vucic.</li>
+<li><a
+href="https://leonfrench.github.io/protein-neighborhoods/">Protein
+Neighborhoods</a>: Look up the data driven neighborhood of your favorite
+proteins.</li>
 </ul>
 </div>
 <div id="monkey" class="section level2">
